<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="carSpeedPermission">microG get car speed</string>
    <string name="gms_app_name">microG Services</string>
    <string name="gms_settings_name">microG Settings</string>
    <string name="gms_settings_summary">Setup microG services.</string>
    <string name="just_a_sec">Just a sec…</string>
    <string name="google_account_label">Google</string>
    <string name="ask_permission_tos">By continuing, you allow this app and Google to use your information in accordance with their respective terms of service and privacy policies.</string>
    <string name="ask_scope_permission_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to:</string>
    <string name="ask_service_permission_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to use:</string>
    <string name="account_manager_title">Google Account Manager</string>
    <string name="sorry">Sorry…</string>
    <string name="auth_before_connect">"An app on your device is trying to sign in to a Google account.

If this was intentional, use the <b>Sign in</b> button to connect to Google’s sign-in page, if not, press <b>Cancel</b> to go back to the application that caused this dialog to show up."</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_connecting">"Your device is establishing a connection to Google’s servers to sign you in.

This can take a few seconds."</string>
    <string name="no_network_error_desc">"You don’t have a network connection.

This could be a temporary problem or your Android device may not be provisioned for data services. Try again when connected to a mobile network, or connect to a Wi-Fi network."</string>
    <string name="auth_general_error_desc">"There was a problem communicating with Google servers.

Try again later."</string>
    <string name="auth_finalize">"Your device is contacting Google to save information to your account.

This can take a couple of minutes."</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="auth_notification_title">Authentication required</string>
    <string name="auth_notification_content"><xliff:g example="F-Droid">%1$s</xliff:g> requires your authorization to access your Google account.</string>
    <string name="perm_status_broadcast_label">listen to internal status broadcasts</string>
    <string name="perm_c2dm_receive_label">listen to C2DM messages</string>
    <string name="perm_c2dm_send_label">send C2DM messages to other apps</string>
    <string name="perm_gtalk_svc_label">exchange messages and receive sync notifications from Google servers</string>
    <string name="perm_extended_access_label">Extended access to Google services</string>
    <string name="perm_provision_label">provision microG services</string>
    <string name="perm_provision_description">Allows the app to configure microG services without user interaction</string>
    <string name="service_name_checkin">Google device registration</string>
    <string name="service_name_mcs">Cloud Messaging</string>
    <string name="service_name_snet">Google SafetyNet</string>
    <string name="service_name_vending">Play Store services</string>
    <string name="service_status_disabled">Disabled</string>
    <string name="service_status_enabled">Enabled</string>
    <string name="service_status_automatic">Automatic</string>
    <string name="service_status_manual">Manual</string>
    <string name="service_status_enabled_short">On</string>
    <string name="service_status_disabled_short">Off</string>
    <string name="games_title">Google Play Games</string>
    <string name="games_info_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to use Play Games</string>
    <string name="games_info_content">To use Play Games it is required to install the Google Play Games app. The application might continue without Play Games, but it is possible that it will behave unexpectedly.</string>
    <string name="pick_place_title">Pick a place</string>
    <string name="pick_place_desc">Place picker is not yet available.</string>
    <string name="place_picker_select_title">Select this location</string>
    <string name="place_picker_nearby_places">Nearby places</string>
    <string name="place_picker_location_lat_lng">(%1$.7f, %2$.7f)</string>
    <string name="lacking_permission_toast">microG Services: Lacking permission to <xliff:g example="have full network acccess">%1$s</xliff:g></string>
    <string name="network_type_mobile">Mobile network</string>
    <string name="network_type_wifi">Wi-Fi</string>
    <string name="network_type_roaming">Roaming</string>
    <string name="network_type_other">Other networks</string>
    <string name="self_check_cat_fake_sig">Signature spoofing support</string>
    <string name="self_check_cat_gms_packages">Installed packages</string>
    <string name="self_check_cat_system">System</string>
    <string name="self_check_name_fake_sig_perm">System has signature spoofing support: </string>
    <string name="self_check_resolution_fake_sig_perm">Your ROM has no native support for signature spoofing. You can still use Xposed or other systems to spoof signature. Please check the documentation on which ROMs do support signature spoofing and how to use microG on ROMs that do not.</string>
    <string name="self_check_name_perm_granted">System grants signature spoofing permission: </string>
    <string name="self_check_resolution_perm_granted">This is a strong indicator that the ROM does support signature spoofing, but requires further action to activate it. Please check the documentation on which steps might be required.</string>
    <string name="self_check_name_system_spoofs">System spoofs signature: </string>
    <string name="self_check_resolution_system_spoofs">Please check the documentation on which steps might be required.</string>
    <string name="self_check_pkg_gms">Play Services (GmsCore)</string>
    <string name="self_check_pkg_vending">Play Store (Phonesky)</string>
    <string name="self_check_pkg_gsf">Services Framework (GSF)</string>
    <string name="self_check_name_app_installed"><xliff:g example="F-Droid">%1$s</xliff:g> installed: </string>
    <string name="self_check_resolution_app_installed">Install the application <xliff:g example="F-Droid">%1$s</xliff:g> or a compatible one. Please check the documentation on which applications are compatible.</string>
    <string name="self_check_name_correct_sig"><xliff:g example="F-Droid">%1$s</xliff:g> has correct signature: </string>
    <string name="self_check_resolution_correct_sig">Either the installed <xliff:g example="F-Droid">%1$s</xliff:g> is not compatible or signature spoofing is not active for it. Please check the documentation on which applications and ROMs are compatible.</string>
    <string name="self_check_name_battery_optimizations">Battery optimizations ignored:</string>
    <string name="self_check_resolution_battery_optimizations">Touch here to disable battery optimizations. Not doing this may result in misbehaving applications.</string>
    <string name="prefcat_about">About</string>
    <string name="prefcat_components">Components</string>
    <string name="prefcat_configuration">Configuration</string>
    <string name="prefcat_google_services">Google Services</string>
    <string name="prefcat_location_service">Location service</string>
    <string name="prefcat_services">Services</string>
    <string name="prefcat_test">Test</string>
    <string name="cond_gcm_bat_title">Battery optimizations enabled</string>
    <string name="cond_gcm_bat_summary">You enabled Cloud Messaging but have battery optimizations active for microG Services. For push notifications to arrive you should ignore battery optimizations.</string>
    <string name="cond_gcm_bat_action">Ignore optimizations</string>
    <string name="cond_perm_title">Permission missing</string>
    <string name="prefs_account">Account preferences</string>
    <string name="prefs_account_privacy">Personal info &amp; privacy</string>
    <string name="prefs_account_security">Sign-in &amp; security</string>
    <string name="pref_auth_trust_google_title">Trust Google for app permissions</string>
    <string name="pref_auth_trust_google_summary">When disabled, the user is asked before an apps authorization request is sent to Google. Some applications will fail to use the Google account if this is disabled.</string>
    <string name="pref_auth_visible_title">Allow apps to find accounts</string>
    <string name="pref_auth_visible_summary">When enabled, all applications on this device will be able to see email address of your Google Accounts without prior authorization.</string>
    <string name="pref_checkin_enable_summary">Registers your device to Google services and creates a unique device identifier. microG strips identifying bits other than your Google account name from registration data.</string>
    <string name="pref_device_registration_android_id">Android ID</string>
    <string name="checkin_not_registered">Not registered</string>
    <string name="checkin_last_registration">Last registration: <xliff:g example="Yesterday, 02:20 PM">%1$s</xliff:g></string>
    <string name="checkin_enable_switch">Register device</string>
    <string name="pref_info_status">Status</string>
    <string name="pref_more_settings">More</string>
    <string name="pref_add_account_title">Account</string>
    <string name="continue_use">continue to use\"$$\"</string>
    <string name="protobuf">In order to continue, Google will provide your name, email address and profile photo to\"$$\".Please check the privacy policy and service terms before using this app</string>
    <string name="select_account_title">Select account</string>
    <string name="add_more_account">Add another account</string>
    <string name="backup_settings_account_and_storage" >Account storage</string>
    <string name="backup_settings_title">Backup</string>
    <string name="backup_settings_account_name">example@gmail.com</string>
    <string name="backup_settings_storage_info">%s of %s (%s) used</string>
    <string name="backup_settings_backup_by_google_one">Backup by Google One</string>
    <string name="backup_settings_last_backup_time">%s · Last Backup: %s</string>
    <string name="backup_settings_backup_now">Back up now</string>
    <string name="backup_settings_tips">Your device backs up automatically over Wi-Fi after it\'s been idle and charging for 2 hours</string>
    <string name="backup_settings_backup_details">Backup details</string>
    <string name="backup_settings_apps">Apps</string>
    <string name="backup_settings_photos_and_videos">Photos and Vedios</string>
    <string name="backup_settings_sms_messages">SMS messages</string>
    <string name="backup_settings_call_history">Call history</string>
    <string name="backup_settings_device_settings">Device settings</string>
    <string name="backup_settings_google_account_data">Google Account data</string>
    <string name="backup_settings_apps_backup_detail">%s · %s Apps</string>
    <string name="backup_settings_photos_and_videos_backup_detail">Back up To Account: %s</string>
    <string name="backup_settings_sms_messages_backup_detail">No data backed up</string>
    <string name="backup_settings_call_history_backup_detail">No data backed up</string>
    <string name="backup_settings_device_settings_backup_detail">No data backed up</string>
    <string name="backup_settings_google_account_data_detail">Click to view account data synchronization Settings</string>
    <string name="backup_settings_advanced_settings_title">Advanced settings</string>
    <string name="backup_settings_backup_using_mobile_or_metered_wifi_data">Back up using mobile or metered Wi-Fi data</string>
    <string name="backup_settings_manage_backup_storage">Manage Backup Storage</string>
    <string name="backup_settings_use_mobile_data_tips">Charges may apply</string>
</resources>